# LLM-Training-and-Inference

./: README.md  llama-train.py  load_and_save_dataset.py  requirements.txt  save_encodings.py  save_model_in_torchscript.py  test.py
cpp/: CMakeLists.txt  README.md  main.cpp
